Networking/kplabs-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: name-virtual-host-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: website01.example.com
    http:
      paths:
      - backend:
          serviceName: service1
          servicePort: 80
  - host: website02.example.com
    http:
      paths:
      - backend:
          serviceName: service2
          servicePort: 80
